fix issue with cotent covering about section when nav button is clicked

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,33 @@
-.container-fluid {
+/* .container-fluid {
     padding-right:0;
     padding-left:0;
     margin-right:auto;
     margin-left:auto
+} */
+header {
+    height: 300px;
+    background: url(../img/img1.jpeg) no-repeat;
+    background-size: cover;
+    background-position: center;
 }
+/* header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    min-width: 100%;
+    /* min-height: 100%; */
+    /* height: inherit;
+    opacity: 1;
+    z-index: -1;
+    background: url(../img/img1.jpeg) no-repeat;
+    background-size: cover;
+    background-position: center;
+} */
 .jumbotron {
-    background-color: #2b65d6;
+    /* background-color: #2b65d6; */
+    background-color: transparent;
     color: #ffffff;
     padding: 60px 25px;
     margin-bottom: 0;
@@ -14,7 +36,7 @@
 .navbar {
     margin-top: -1px;
     margin-bottom: 0;
-    background-color: #2b65d6;
+    /* background-color: #2b65d6; */
     z-index: 9999;
     border: 0;
     font-size: 12px !important;
@@ -40,7 +62,7 @@
     font-size: 200px;
 }
 #about {
-  background-color: #c9c9c9;
+  /* background-color: #e9ecef; */
   margin-bottom: 30px;
 }
 #about .row {
